--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -15,7 +16,6 @@ body {
 video {
   display: flex;
   justify-content: center;
-  align-content: center;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -24,14 +24,12 @@ video {
   z-index: -1;
 } 
 .h1 {
-  width: 50vw;
+  width: 50vw;  
   height: 55vh;
-  text-align: center;
   font-family: "num1";
   color: #000000;
   display: flex;
   justify-content: center;
-  align-content: center;
   align-items: center;
   margin-top: 2vw;
   margin-left: 25vw;
@@ -48,7 +46,7 @@ h1:hover::before {
   width: 45vw;
   height: 10vw;
   box-shadow: 0 10px 0 0;
-  color: black;
+
   background-color: white;
   border-radius: 20px;
   border: solid 2px #000000;
@@ -56,7 +54,6 @@ h1:hover::before {
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-content: center;
   text-align: left;
   align-items: center;
   position: absolute;
@@ -65,21 +62,12 @@ h1:hover::before {
   content: "На самом деле нет.\A Важнее &mdash; научиться ошибки.";
   font-size: 2vw;
   z-index: 10;
-  pointer-events: none;
 }
 
 
 h1:hover + video{
   background-color: white;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0.6; 
-  z-index: 2; 
-  pointer-events: none;
-
+  opacity: 0.6;
+  z-index: 2;  
 }
